[project]
name = "clap-finetune"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
dependencies = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "lightning>=2.3.3",
    "datasets>=2.20.0",
    "py7zr>=0.21.1",
    "huggingface-hub[cli]>=0.24.5",
    "webdataset>=0.2.86",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clap_finetune"]
